--- a/style.css
+++ b/style.css
@@ -53,6 +53,36 @@ cursor: pointer;
 	top:1px;
 }
 
+.smallCard{
+width: 130px;
+height: 100px;
+border: 2px solid black;
+box-shadow: 2px 2px 8px black;
+}
+
+.smallCard:hover{
+width: 130px;
+height: 100px;
+border: 2px solid yellow;
+cursor: pointer;
+}
+
+.smallCard:active{
+	position:relative;
+	top:1px;
+}
+
+.selectedSmall{
+width: 128px;
+height: 98px;
+border: 2px solid red;
+}
+
+.selectedSmall:active{
+	position:relative;
+	top:1px;
+}
+
 .selectedCard{
 width: 148px;
 height: 98px;
