--- a/style.css
+++ b/style.css
@@ -142,6 +142,15 @@ margin: 20px;
 border: 4px double #369;
 }
 
+#scoreDiv{
+height: 200px;
+overflow: auto;
+}
+
+#scoreTable{
+overflow: auto;
+}
+
 .username{
 text-align: left;
 font-weight: bold;
